# iast-scanner

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
iast_scanner/: main.py  requirements.txt
iast_scanner/core/components/: cloud_api.py  config.py  logger.py  util.py  web_console.py
iast_scanner/core/modules/: monitor.py
iast_scanner/plugin/scanner/: command_basic.py  eval_basic.py  include_basic.py
