[tool.poetry]
name = "iast-scanner"
version = "1.3.0"
description = "IAST插桩式主动扫描器"
authors = ["g3g4x5x6 <g3g4x5x6@foxmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
